--- a/todo.txt
+++ b/todo.txt
@@ -1,47 +1,24 @@
-In this task, you’ll define the models for your MongoDB database and write business logic for your API and database using Mongoose.
+AND AS THE ANOTHER PART OF THIS EXCERSIZE WE HAVE THIS In this Exercise, 
+you learned about the importance of authentication and authorization, along with 
+a few different means of applying it in web applications. Let’s now apply what 
+you’ve learned to your myFlix API.
 
 Directions:
 
-Part 1
-
-First, create the schema for your database using Mongoose models, making sure they can be used by the 
-rest of your application.
-
-Create a new file called “models.js” in your project directory.
-Create the models for your “Movies” schema and “Users” schema using Mongoose. 
-These should be based on the database you defined in the previous 
-Exercise (including attributes, data types, and any other other formatting).
-Export these models from your “models.js” file using module.exports.
-Import your “models.js” file into your main “index.js” file, integrating the models with 
-the rest of your application.
-Part 2
-
-Back in Exercise 2.5, you created request methods to match each of the requirements
- for your API project (listed below), each with a URL endpoint and request method type:
-
-Return a list of ALL movies to the user
-Return data (description, genre, director, image URL, whether it’s featured or not) 
-about a single movie by title to the user
-Return data about a genre (description) by name/title (e.g., “Thriller”)
-Return data about a director (bio, birth year, death year) by name
-Allow new users to register
-Allow users to update their user info (username, password, email, date of birth)
-Allow users to add a movie to their list of favorites
-Allow users to remove a movie from their list of favorites
-Allow existing users to deregister
-In your “documentation.html” file, you documented what each method would do,
- what type of data it would take, and what type of data it would send back as a response. 
- At the time, this was pretty hypothetical, given that you didn’t yet have the underlying 
- database or models in place. Now, however, you have your Mongoose models, so you can update this documentation.
-
-First, using your “Users” and “Movies” models, fill in each request method with 
-the Mongoose logic you just wrote to make the request methods functional.
-As you do so, be sure to update your documentation with more accurate information 
-about the format of the data (if any), the method that’s expected in its body (with an example), 
-and what data the method will be sending back as a response (with an example).
-For example, a method to update user info would be expecting a JSON object with 
-data about what data in the user document should be updated.
-After you implement each method, test it in Postman with sample data and share a screenshot of the result.
-Push your changes to GitHub.
-Submit a link to your project directory (including your “documentation.html” file) and Postman 
-screenshots (in a zip file) here for review.
+Install the necessary packages/libraries for basic HTTP authentication and JWT authentication with Passport.
+Create a new file, “passport.js”, in your project directory.
+In this file, define your two authentication strategies: “LocalStrategy” and “JWTStrategy.”
+Create a new file, “auth.js”, in your project directory.
+In your new “auth.js” file, create a new “/login” endpoint for registered users 
+that contains logic for authenticating users with basic HTTP authentication and generating 
+a JWT token for authenticating future requests.
+Add the following code to your “index.js” file to ensure your application can make use of 
+your “auth.js” file, and that your “auth.js” file can use Express: let auth = require('./auth')(app);
+Integrate your two Passport strategies as middleware into each of your existing API endpoints so 
+that only users with a JWT token can make requests to your API.
+Remember to exclude the API endpoint for “adding a new user.” If added, your app’s users will 
+be restricted from registering due to the authentication measures applied.
+Test each method using Postman and take screenshots documenting each test.
+Update your project directory on GitHub to reflect these changes and submit 
+a link to your project here, along with a PDF or zip file containing your 
+test result screenshots, for your tutor to review.
